@@ -69,7 +69,7 @@ public:
 class wxPyCBInputStream : public wxInputStream {
 public:
     ~wxPyCBInputStream();
-    virtual size_t GetSize() const;
+    virtual wxFileOffset GetLength() const;
 
     // factory function
     static wxPyCBInputStream* create(PyObject *py, bool block=true);
